mysys/my_init.c
@@ -305,8 +305,6 @@ static void my_win_init(void)
   const char *targetKey = "Software\\MySQL" ;
   DBUG_ENTER("my_win_init");
 
-  setlocale(LC_CTYPE, "");             /* To get right sortorder */
-
 #if defined(_MSC_VER)
 #if _MSC_VER < 1300
   /* 
